--- a/homepage.html
+++ b/homepage.html
@@ -3,14 +3,14 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <nav>
+  <div class="nav">
     <ul class="navList">
       <li><a href="homepage.html">Home</a></li>
       <li><a href="blog.html">blog</a></li>
       <li><a href="portfolio.html">Porfolio</a></li>
       </li>
     </ul>
-  </nav>
+  </div>
   <div class="container">
     <img src="lester.jpg" id="image" / >
     <ul class="hobbies">
@@ -39,6 +39,7 @@
 
     </ul>
   </div>
+
 
 </body>
 </html>
