--- a/portfolio.html
+++ b/portfolio.html
@@ -3,17 +3,23 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <nav>
+  <div class="nav">
     <ul class="navList">
       <li><a href="homepage.html">Home</a></li>
       <li><a href="blog.html">blog</a></li>
-      <li><a href="porfolio.html">Porfolio</a></li>
+      <li><a href="portfolio.html">Porfolio</a></li>
       </li>
     </ul>
-  </nav>
+  </div>
   <div class="container">
+    <h3>My porfolio is also pretty dry right now</h3>
+    <hr />
+
+    <p>Not sure what to blog about sorry hahah...
+    </p>
 
   </div>
+
 
 </body>
 </html>
